<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_movie">

    <fragment
        android:id="@+id/navigation_movie"
        android:name="com.dicoding.picodiploma.movieapplication.ui.movie.MovieFragment"
        android:label="@string/movie"
        tools:layout="@layout/fragment_movie" />

    <fragment
        android:id="@+id/navigation_tv_series"
        android:name="com.dicoding.picodiploma.movieapplication.ui.tvseries.TVSeriesFragment"
        android:label="@string/tv_series"
        tools:layout="@layout/fragment_tv_series" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.dicoding.picodiploma.movieapplication.ui.favorite.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite" />
</navigation>