<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_item_course"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    android:orientation="vertical"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    app:cardMaxElevation="5dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:src="@color/teal_200"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/text_item_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="2"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_poster"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/title" />

        <TextView
            android:id="@+id/text_item_genre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:gravity="start"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_poster"
            app:layout_constraintTop_toBottomOf="@+id/text_item_title"
            tools:text="@string/genre" />

        <TextView
            android:id="@+id/text_summary"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="start"
            android:maxLines="2"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_poster"
            app:layout_constraintTop_toBottomOf="@+id/text_item_genre"
            tools:text="@string/summary" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
